--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
+actix-web-opentelemetry = "0.13.0"
+env_logger = "0.10.0"
+opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread", "rt-tokio"] }
+opentelemetry-otlp = "0.11.0"
 serde = "1.0.152"
 serde_json = "1.0.93"
