--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix-web = "4.3.1"
 actix-web-opentelemetry = "0.13.0"
 opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread", "rt-tokio"] }
 opentelemetry-otlp = "0.11.0"
-serde = "1.0.152"
+serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 tokio = { version = "1.26.0", features = ["full"] }
 tracing = "0.1.37"
