--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ tokio = { version = "1.26.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-opentelemetry = "0.18.0"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+
+[features]
+default = ["helloworld"]
+helloworld = []
