--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 actix-web-opentelemetry = { version = "0.13.0" }
-opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread", "rt-tokio"] }
-opentelemetry-otlp = "0.11.0"
+opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
+opentelemetry-otlp = { version = "0.11.0" }
 opentelemetry-prometheus = { version = "0.11.0", optional = true }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
-tokio = { version = "1.26.0", features = ["full"] }
+tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
 tracing = "0.1.37"
 tracing-opentelemetry = "0.18.0"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
