--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
 name = "actix-microservice"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.3.1"
-actix-web-opentelemetry = { version = "0.13.0" }
-opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
-opentelemetry-otlp = { version = "0.11.0" }
-opentelemetry-prometheus = { version = "0.11.0", optional = true }
-serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.93"
-tokio = { version = "1.26.0", features = ["rt-multi-thread"], optional = true }
-tracing = "0.1.37"
-tracing-opentelemetry = "0.18.0"
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+actix-web = "4.4.0"
+actix-web-opentelemetry = { version = "0.16.0" }
+opentelemetry = { version = "0.21.0", default-features = false, features = ["trace"] }
+opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio-current-thread"] }
+opentelemetry-otlp = { version = "0.14.0" }
+opentelemetry-prometheus = { version = "0.14.1", optional = true }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+tokio = { version = "1.35.1", features = ["rt-multi-thread"], optional = true }
+tracing = "0.1.40"
+tracing-opentelemetry = "0.22.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [features]
 default = ["helloworld"]
